[package]
name = "play-wayland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.10"
log = "0.4"
wayland-client = "0.31"

[dependencies.wayland-protocols]
version = "0.31"
features = ["client"]

[dependencies.nix]
version = "0.27"
features = ["fs"]
